fix(form components): : dark mode token updates (#277)
* feat(custom-date-picker): updated custom date, time, date range pickers w flatpickr (#242)

* feat(form components): dark mode for all form-related components

* feat: numberInput, radioButton, toggleButton first pass

* fix: checkbox color tokens (check: invalid and error message)

* feat: quick token adjustment on skeleton loader gradient using new color tokens

* fix: textArea, textInput

* feat: additional styles, instantiate kyn-checkbox in dropdown multiple selection

* fix: broken error icon in numberInput, begin radioButton token updates

* fix: handleChange for radioButton now working as expected

* fix: revert skeleton.scss, will handle in separate PR

* feat: checkbox and radioButton refactored to match figma

* fix: update dropdown, numberInput, toggleButton to match recent figma updates

* feat: bring checkbox and radioButton up to date with figma file

* fix: checkbox and dropdown updates

* fix: use secondary-state-default for now

* fix: reflect pushed token

* fix: playwright updates, fix tests

* fix: robert 25.11.2024 ready for dev updates

* feat: update with new foundation next version, more checks

* feat: refactor checkmark in checkbox to use single base64

* fix: toggle hover on focus styling

--- a/src/common/scss/form-input.scss
+++ b/src/common/scss/form-input.scss
@@ -3,6 +3,7 @@
 
 .label-text {
   @include typography.type-ui-02;
+  color: var(--kd-color-text-forms-label-primary);
   font-weight: 500;
   display: flex;
   align-items: center;
@@ -16,16 +17,16 @@
   }
 
   [disabled] & {
-    color: var(--kd-color-text-disabled);
+    color: var(--kd-color-text-link-level-disabled);
   }
 }
 
 .required {
   text-decoration: none;
-  color: var(--kd-color-text-error);
+  color: var(--kd-color-status-error-dark);
 
   [disabled] & {
-    color: var(--kd-color-text-disabled);
+    color: var(--kd-color-text-level-primary);
   }
 }
 
@@ -36,7 +37,7 @@
 
 .options-text {
   margin: 0;
-  color: var(--kd-color-text-secondary);
+  color: var(--kd-color-text-forms-label-secondary);
   @include typography.type-ui-03;
 }
 
@@ -45,11 +46,11 @@ input,
 textarea {
   pointer-events: auto;
   @include typography.type-body-02;
-  border-color: var(--kd-color-border-ui);
-  color: var(--kd-color-text-primary);
+  border-color: var(--kd-color-border-ui-default);
+  color: var(--kd-color-text-forms-input-field-text);
   transition: background-color 150ms ease-out, border-color 150ms ease-out,
     outline-color 150ms ease-out;
-  background: var(--kd-color-background-inverse);
+  background: var(--kd-color-background-forms-default);
   outline: 2px solid transparent;
   outline-offset: 2px;
 
@@ -58,27 +59,39 @@ textarea {
   }
 
   &:focus {
-    outline-color: var(--kd-color-border-focus);
+    outline-color: var(--kd-color-border-variants-focus);
   }
 
   &::placeholder {
-    color: var(--kd-color-text-placeholder);
+    color: var(--kd-color-text-variant-placeholder);
+  }
+
+  &:-ms-input-placeholder {
+    color: var(--kd-color-text-variant-placeholder);
+  }
+
+  &::-ms-input-placeholder {
+    color: var(--kd-color-text-variant-placeholder);
   }
 
   &[invalid] {
-    border-color: var(--kd-color-border-error);
+    border-color: var(--kd-color-status-error-dark);
   }
 
   &[disabled] {
-    color: var(--kd-color-text-disabled);
+    color: var(--kd-color-text-link-level-disabled);
     border-color: var(--kd-color-border-ui-disabled);
+
+    &[invalid] {
+      border-color: var(--kd-color-status-error-dark);
+    }
   }
 }
 
 .error {
   display: flex;
   align-items: center;
-  color: var(--kd-color-text-error);
+  color: var(--kd-color-status-error-dark);
   margin-top: 8px;
   cursor: default;
 
@@ -99,8 +112,10 @@ textarea {
   }
 }
 
+
+// CHECK: ERROR ICON -- not yet modified
 .error-icon {
-  color: var(--kd-color-text-error);
+  color: var(--kd-color-status-error-dark);
 
   [disabled] & {
     color: var(--kd-color-text-disabled);
@@ -118,6 +133,7 @@ textarea {
 .caption {
   margin-top: 8px;
   cursor: default;
+  color: var(--kd-color-text-forms-label-secondary);
 
   [disabled] & {
     color: var(--kd-color-text-disabled);
@@ -136,10 +152,23 @@ textarea {
   background: none;
   border: none;
   cursor: pointer;
-  color: var(--kd-color-text-secondary);
+  color: var(--kd-color-text-icon-primary);
 
   &:hover {
     opacity: 0.8;
+    color: var(--kd-color-text-icon-secondary);
+  }
+}
+
+.caption-error-count {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+
+  .count {
+    @include typography.type-ui-02;
+    color: var(--kd-color-text-forms-input-field-text);
+    margin-top: 13px;
   }
 }
 
@@ -178,7 +207,7 @@ textarea {
 
 .description-text {
   @include typography.type-body-02;
-  color: var(--kd-color-text-primary);
+  color: var(--kd-color-text-level-primary);
   margin-top: -4px;
   margin-bottom: 8px;
 
